test_regress/t/t_alias_ports_unsup.out
%Error-UNSUPPORTED: t/t_alias_ports_unsup.v:38:9: Unsupported: Port as alias argument: 'a'
                                                : ... note: In instance 't.s'
   38 |   alias a = b;
      |         ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_alias_ports_unsup.v:38:13: Unsupported: Port as alias argument: 'b'
                                                 : ... note: In instance 't.s'
   38 |   alias a = b;
      |             ^
%Error: Exiting due to
